deploy/charts/transaction-service/values/templates/db/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
        allow-from: hello-world
    spec:
      containers:
      - name: postgresql
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-storage
          mountPath: /var/lib/postgresql/data
        - name: db-init-script
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
      volumes:
      - name: postgresql-storage
        emptyDir: {}
        # persistentVolumeClaim:
        #   claimName: postgresql-pvc
      - name: db-init-script
        configMap:
          name: db-init-script
