deploy/charts/transaction-service/values/templates/db/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-network-policy
spec:
  podSelector:
    matchLabels:
      app: postgresql
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: hello-world
